force-app/main/default/objects/Message__c/fields/CRM_Event_Type__c.field-meta.xml
<CustomField>
    <fullName>CRM_Event_Type__c</fullName>
    <description>If message is an event, this field describe the type of event</description>
    <label>Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CRM_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>END_OF_CHAT</fullName>
            </value>
            <value>
                <fullName>UNIT_TRANSFER</fullName>
            </value>
            <value>
                <fullName>QUEUE_TRANSFER</fullName>
            </value>
            <value>
                <fullName>JOURNAL</fullName>
            </value>
            <value>
                <fullName>INTERNAL_MESSAGE</fullName>
            </value>
            <value>
                <fullName>EXTERNAL_MESSAGE</fullName>
            </value>
            <value>
                <fullName>REDACTED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>