force-app/main/default/objects/Message__c/fields/CRM_External_Message__c.field-meta.xml
<CustomField>
    <fullName>CRM_External_Message__c</fullName>
    <defaultValue>false</defaultValue>
    <label>External Message</label>
    <type>Checkbox</type>
</CustomField>