force-app/main/default/objects/Message__c/fields/CRM_From_Contact__c.field-meta.xml
<CustomField>
    <fullName>CRM_From_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>From Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Contact_Messages</relationshipName>
    <type>Lookup</type>
</CustomField>