force-app/main/default/objects/Message__c/fields/CRM_From_First_Name__c.field-meta.xml
<CustomField>
    <fullName>CRM_From_First_Name__c</fullName>
    <formula>IF( CRM_From_Contact__c != null,
        CRM_From_Contact__r.FirstName,
        IF(CRM_From_User__c != null,
        CRM_From_User__r.CRM_NAV_Ident__c,
        CRM_From_Ident__c
        ) + &apos; (Nav-enhet &apos; + IF(CRM_From_User__c != null,
        CRM_From_User__r.Department,
        CRM_From_NAV_Unit__c)
        + &apos;)&apos;
        )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>From First Name</label>
    <type>Text</type>
</CustomField>