force-app/main/default/objects/Message__c/fields/CRM_From_Label__c.field-meta.xml
<CustomField>
    <fullName>CRM_From_Label__c</fullName>
    <label>From Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>