force-app/main/default/objects/Message__c/fields/CRM_Is_logged_in_User__c.field-meta.xml
<CustomField>
    <fullName>CRM_Is_logged_in_User__c</fullName>
    <description>Will return true if the logged in user is the same as Recipient. Used for List view
        Filtering, not to be shown</description>
    <formula>$User.Id == CRM_From_User__c || $User.ContactId == CRM_From_Contact__c </formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is logged in User</label>
    <type>Checkbox</type>
</CustomField>