force-app/main/default/objects/Message__c/fields/CRM_Is_Redacted__c.field-meta.xml
<CustomField>
    <fullName>CRM_Is_Redacted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked this message has been redacted</description>
    <label>Is Redacted</label>
    <type>Checkbox</type>
</CustomField>