force-app/main/default/objects/Message__c/fields/CRM_Message_Text__c.field-meta.xml
<CustomField>
    <fullName>CRM_Message_Text__c</fullName>
    <label>Message Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>