force-app/main/default/objects/Message__c/fields/CRM_Read_By_Nav__c.field-meta.xml
<CustomField>
    <fullName>CRM_Read_By_Nav__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CRM Read By Nav</label>
    <type>Checkbox</type>
</CustomField>