force-app/main/default/objects/Message__c/fields/CRM_Read_By_Nav_Datetime__c.field-meta.xml
<CustomField>
    <fullName>CRM_Read_By_Nav_Datetime__c</fullName>
    <label>CRM Read By Nav Datetime</label>
    <type>DateTime</type>
</CustomField>