force-app/main/default/objects/Message__c/fields/CRM_Read_Datetime__c.field-meta.xml
<CustomField>
    <fullName>CRM_Read_Datetime__c</fullName>
    <label>Read Datetime</label>
    <type>DateTime</type>
</CustomField>