force-app/main/default/objects/Message__c/fields/CRM_Sensitive_Information__c.field-meta.xml
<CustomField>
    <fullName>CRM_Sensitive_Information__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Depicts if the message has been marked to contain sensitive information.</description>
    <label>Sensitive Information</label>
    <type>Checkbox</type>
</CustomField>