force-app/main/default/objects/Message__c/fields/CRM_Thread_Type__c.field-meta.xml
<CustomField>
    <fullName>CRM_Thread_Type__c</fullName>
    <formula>TEXT(CRM_Thread__r.CRM_Thread_Type__c)</formula>
    <label>Thread Type</label>
    <type>Text</type>
</CustomField>